# cw-face-editor

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: face_data.rs  main.css  main.rs
