[package]
name = "cw-face-editor"
version = "0.1.0"
authors = ["Stefnotch <brandmairstefan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
dioxus = { version = "0.5", features = ["desktop"] }
winreg = { version = "0.52", features = ["transactions"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
